--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-streamlit
-transformers
-torch
-beautifulsoup4
-requests
+requirements
+streamlit==1.36.0
 pandas
+requests
+beautifulsoup4
+transformers==4.38.2
 docx2txt
 PyPDF2
-selenium
+plotly
+pytz
+googletrans==4.0.0-rc1
+streamlit_oauth
