--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit
-requests
-beautifulsoup4
-transformers
-docx2txt
-PyPDF2
-smtplib
-email
-selenium
-pandas
-openpyxl
+streamlit==1.36.0
+requests==2.32.3
+beautifulsoup4==4.12.3
+transformers==4.38.1
+docx2txt==1.0
+PyPDF2==3.0.1
+selenium==4.19.0
+urllib3==2.2.1
+chromedriver-autoinstaller==0.6.4
