--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-streamlit==1.36.0
-requests==2.32.3
-beautifulsoup4==4.12.3
-transformers==4.38.1
-docx2txt==1.0
+streamlit==1.33.0
+transformers==4.38.2
+torch==2.1.0
+sentencepiece==0.1.99
+protobuf==3.20.3
+selenium==4.17.2
+chromedriver-autoinstaller
 PyPDF2==3.0.1
-selenium==4.19.0
-urllib3==2.2.1
-chromedriver-autoinstaller==0.6.4
+docx2txt==1.0
+beautifulsoup4==4.12.3
+pandas==2.2.1
+requests==2.31.0
+urllib3==1.26.18
+lxml==4.9.3
+rich==13.7.1
