--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,12 @@ streamlit==1.33.0
 transformers==4.38.2
 torch==2.1.0
 sentencepiece==0.1.99
-protobuf==3.20.3
+chromedriver-autoinstaller==0.6.3
 selenium==4.17.2
-chromedriver-autoinstaller
 PyPDF2==3.0.1
 docx2txt==1.0
 beautifulsoup4==4.12.3
-pandas==2.2.1
 requests==2.31.0
 urllib3==1.26.18
 lxml==4.9.3
-rich==14.0.0
+pandas==2.2.1
