--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ streamlit==1.33.0
 transformers==4.38.2
 torch==2.1.0
 sentencepiece==0.1.99
-chromedriver-autoinstaller==0.6.3
-selenium==4.17.2
+chromedriver-autoinstaller>=0.4.0
+selenium>=4.0.0
 PyPDF2==3.0.1
 docx2txt==0.8
 beautifulsoup4==4.12.3
 requests==2.31.0
+webdriver-manager>=3.8.5
