--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-streamlit==1.33.0
-transformers==4.38.2
-torch==2.1.0
-sentencepiece==0.1.99
-chromedriver-autoinstaller>=0.4.0
-selenium>=4.0.0
-PyPDF2==3.0.1
-docx2txt==0.8
-beautifulsoup4==4.12.3
-requests==2.31.0
-webdriver-manager>=3.8.5
+streamlit
+selenium>=4.10.0
+beautifulsoup4
+transformers
+PyPDF2
+docx2txt
+chromedriver-autoinstaller
+webdriver-manager
