--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-selenium>=4.10.0
-beautifulsoup4
-transformers
-PyPDF2
-docx2txt
-chromedriver-autoinstaller
-webdriver-manager
+streamlit==1.33.0
+selenium==4.17.2
+beautifulsoup4==4.12.3
+transformers==4.38.2
+PyPDF2==3.0.1
+docx2txt==0.8
+chromedriver-autoinstaller==0.6.3
+webdriver-manager==4.0.2
