--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.33.0
-selenium==4.17.2
+streamlit==1.36.0
+openai==1.13.3
 beautifulsoup4==4.12.3
-transformers==4.38.2
-PyPDF2==3.0.1
-docx2txt==0.8
-webdriver-manager==4.0.2
+selenium==4.18.1
+webdriver-manager==4.0.1
