--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-streamlit==1.36.0
-openai==1.13.3
-beautifulsoup4==4.12.3
-selenium==4.18.1
-webdriver-manager==4.0.1
+streamlit
+transformers
+torch
+beautifulsoup4
+requests
+pandas
+docx2txt
+PyPDF2
+selenium
