--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
 streamlit
-transformers
-torch
-beautifulsoup4
-requests
-pandas
+openai
 docx2txt
-PyPDF2
-selenium
-webdriver-manager==4.0.2
-
+pypdf2
