--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit==1.31.1
-beautifulsoup4==4.12.3
-requests==2.32.0
-pandas==2.2.1
+streamlit==1.33.0
+sentence-transformers==2.7.0
+scikit-learn==1.4.0
+numpy==1.26.0
+pandas==2.1.0
+plotly==5.18.0
+python-dotenv==1.0.0
+requests==2.31.0
