--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ scikit-learn==1.4.0
 numpy==1.26.0
 pandas==2.1.0
 plotly==5.18.0
+PyPDF2==3.0.1
 python-dotenv==1.0.0
-requests==2.31.0
+protobuf==4.25.3
