--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.31.1
-beautifulsoup4==4.12.3
-requests==2.32.0
-pandas==2.2.1
+streamlit==1.36.0
+geocoder==1.38.1
+google-generativeai==0.5.4
+PyPDF2==3.0.1
