--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 streamlit==1.36.0
-geocoder==1.38.1
-google-generativeai==0.5.4
 PyPDF2==3.0.1
+google-generativeai==0.5.4
+geocoder==1.38.1
+pdfkit==1.0.0
+jinja2==3.1.2  # Optional but useful for HTML templating
