--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,8 @@ PyPDF2==3.0.1
 google-generativeai==0.5.4
 geocoder==1.38.1
 pdfkit==1.0.0
-jinja2==3.1.2
+jinja2==3.1.2  # Optional but useful for HTML templating
 wkhtmltopdf==0.2
 fpdf==1.7.2
 python-docx==1.1.0
 openai==1.24.1
-pandas==2.0.3  # Compatible with Python 3.7+, streamlit
-openpyxl==3.1.2  # For Excel file handling
